<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_quick_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="13dp"
    android:background="@drawable/widget_hyperos_background">
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/widget_quick_label" android:textColor="#72747B" android:textSize="11sp" android:includeFontPadding="false" />
    <TextView android:id="@+id/widget_quick_asset" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:layout_marginTop="8dp" android:gravity="center" android:background="@drawable/widget_button_background" android:text="@string/widget_quick_asset_short" android:textColor="#141518" android:textSize="13sp" android:includeFontPadding="false" />
    <TextView android:id="@+id/widget_quick_wish" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1" android:layout_marginTop="6dp" android:gravity="center" android:background="@drawable/widget_button_background" android:text="@string/widget_quick_wish_short" android:textColor="#141518" android:textSize="13sp" android:includeFontPadding="false" />
</LinearLayout>
